# Drona-DMR

./: .gitmodules  LICENSE  README.md  _config.yml  dmr.html  index.html  params.json  root.props
Src/: Drona.sln
Src/AstecFireFly/: AstecFireFly.sln
Src/AstecFireFly/AstecFireFly/: AsctecFireFly.h  AstecFireFlyController.h  AstecFireFlyInternals.h  AstecFirefly.cpp  AstecFirefly.vcxproj  AstecFirefly.vcxproj.filters
Src/AstecFireFly/MachineLearningExperiments/: Experiments.txt  results.xlsx
Src/AstecFireFly/TestAstecFireflyController/: AstecFireflyController.vcxproj  main.cpp
Src/AstecFireFly/TestControllerExecuteSteps/: TestController_2.vcxproj  main.cpp
Src/Complan/: Complan_v2.sln
Src/Complan/Complan/: Complan.cpp  Complan.h  Complan_v2.sln  GenerateConstraints.cpp  GenerateConstraints.h  GenerateTrajectory.cpp  GenerateTrajectory.h  InputParser.cpp  InputParser.h  Makefile  MotionPrimitives.h  Z3OutputParser.cpp  Z3OutputParser.h
Src/Complan/EMSOFT/: Emsoft.vcxproj  dimension.txt
Src/Complan/Semplan/: Astar.h  Complan_v2.vcxproj  Complan_v2.vcxproj.filters  InputParser.cpp  Makefile  MotionPrimitives.cpp  MotionPrimitives.h  Semplan.cpp  Semplan.h
Src/DAMP/: Astar.cpp  InputParser.h
Src/DistributedMP/: Common.p  DisMP.p
Src/Examples/MailDelivery_1/: HelperFunctions.p  MailDeliveryTaskPlanner.p  Map.xlsx
Src/Examples/Workspace/: W1.xlsx
Src/Lib/Communication/: Communication.vcxproj  Communication.vcxproj.filters
Src/Lib/Compat/: Compat.h
Src/Lib/MavlinkMsgHeaders/: mavlink_helpers.h
Src/Lib/PFloat32/: Float32.c  Float32.h  Float32.p  PFloat32.vcxproj  PFloat32.vcxproj.filters
Src/Lib/PMavlinkMsgs/: PMavlinkMsgs.vcxproj  PMavlinkMsgs.vcxproj.filters
Src/Lib/PlanGenerator/: Astar.cpp  Astar.h  CMakeLists.txt  MotionPrimitives.cpp  MotionPrimitives.h  PathSearchNode.cpp  PathSearchNode.h  PlanGenerator.cpp  PlanGenerator.h  PlanGenerator.vcxproj  PlanGenerator.vcxproj.filters  PrimitiveParser.cpp
Src/Lib/Tracing/: EventListener.h  EventLog.cpp  EventLog.h  EventTrace.cpp  EventTrace.h  ReadMe.txt  Tracing.vcxproj  Tracing.vcxproj.filters
Src/Lib/WorkspaceParser/: CMakeLists.txt  Workspace.h  WorkspaceAPI.p  WorkspaceParser.cpp  WorkspaceParser.h  WorkspaceParser.vcxproj  WorkspaceParser.vcxproj.filters
Src/Lib/astar-algorithm-cpp/: CMakeLists.txt
Src/PX4/: PX4.sln
Src/PX4/Debug/: DgmlMonitorLib.lib
Src/PX4/LogViewer/: LogViewer.sln
Src/PX4/MOVE_TO_FIRMWARE/SoloPingPong/: CMakeLists.txt  PingPong.c  PingPongConfig.h  Toolchain.imx6.cmake  remake.sh  test.p
Src/PX4/MOVE_TO_FIRMWARE/SoloPingPong/PrtRuntime/: CMakeLists.txt  Prt.h  PrtDist.h  PrtDistConfigParser.h  PrtExecution.c  PrtLinuxUserConfig.c  PrtLinuxUserConfig.h  PrtProgram.h  PrtTypes.c  PrtUser.h  PrtValues.c  PrtValues_IDL.h  SafeString.c  SafeString.h
Src/PX4/MavLinkPGenerator/: AllTemplates.cs  MavLinkMessage.cs  PTypeGenerator.cs  PTypeGenerator.csproj
Src/PX4/PX4Console/: Commands.cpp  Commands.h  PX4.cpp  PX4Console.sln  PX4Console.vcxproj  geo.h
Src/ROS_Simulator/: README
Src/ROS_Simulator/map_visualization/: CMakeLists.txt  mainpage.dox  manifest.xml
Src/ROS_Simulator/mesh_visualization/: CMakeLists.txt
Src/ROS_Simulator/path_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
Src/ROS_Simulator/path_planner/datas/: quad_tem.yaml
Src/ROS_Simulator/path_planner/include/: environment_quad.h  environment_swarm.h
Src/ROS_Simulator/path_planner/launch/: sim.launch  test_wpts.launch
Src/ROS_Simulator/path_planner/msg/: CostMapInfo.msg  PathPackage.msg  State.msg
Src/ROS_Simulator/path_planner/src/: environment_quad.cpp  map_visual.cpp  navigate.cpp  path_publishing.cpp  test_waypoints.cpp
Src/ROS_Simulator/primitive_handler/: CMakeLists.txt  mainpage.dox  manifest.xml
Src/ROS_Simulator/quad_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
Src/ROS_Simulator/quadrotor_msgs/: CMakeLists.txt
Src/ROS_Simulator/quadrotor_simulator/: CMakeLists.txt  manifest.xml
Src/SoftwareStack/: BatteryMonitor.p  Driver_PX4Model_old.p  GeofenceMonitor.p  PFiles.4ml  PFiles.c  PFiles.h  PFiles.p  PFilesIncludes.p  POrbMavlink.cpp  PTrace.h  PX4Model.p  Pfiles.vcxproj  Pfiles.vcxproj.filters  SoftwareStack.vcxproj  SoftwareStack.vcxproj.filters  TestCase_1.p  Timer.cpp  Timer.p  linker.c  linker.h  output.4ml
Src/SoftwareStack/FlightController/: FlightController.cpp  FlightController.p
Src/SoftwareStack/MavlinkMsgs/: P_Mavlink_Enums.p  P_Mavlink_MessageTypes.p
Src/SoftwareStack/MotionPlanExecutor/: MotionPlanExecutor.p
Src/SoftwareStack/MotionPlanner/: DAMP.p  DistributedTimeSync.p  TestDriver.p
Src/SoftwareStack/POrb/: POrb.cpp  POrb.h  POrb.p  POrbMavlink.h  POrbTopics.p
Src/SoftwareStack/PX4/: Commands.cpp  Commands.h  Commands.p  HACK.cpp  PX4_API.p
Src/SoftwareStack/PX4Simulator/: DriverIncludes.p  Driver_Commands.p  Driver_Heartbeatmonitor.p  Driver_MissionPlanner.p  Driver_PX4Model.p  Driver_PX4_API.p
Src/SoftwareStack/SenseAndInfer/: AltitudeMonitor.p  GPSHealthMonitor.p  HeartbeatMonitor.p
Src/SoftwareStack/TaskPlanner/: Mission_1.p  (+1 more)
Src/Workspaces/: config_generator.py  experiments_generator.py  plot_stats.py  random_map_generator.py  run_experiments.py
Src/ros_simulator/: .gitignore  requirements.txt
Src/ros_simulator/src/p_controller/: CMakeLists.txt  package.xml
Src/ros_simulator/src/p_controller/cmake/: PCompile.cmake
Src/ros_simulator/src/p_controller/include/: InitRos.h
Src/ros_simulator/src/p_controller/launch/: test_motion_planner.launch  test_motion_planner.launch.template  test_motion_planner.rviz  test_motion_planner.rviz.template  test_plan_executor.launch  test_plan_executor.rviz
Src/ros_simulator/src/p_controller/scripts/: launch_file_converter.py
Src/ros_simulator/src/p_controller/src/: InitRos.cpp  ModelFunctions.cpp  MotionPlanner.p  PlanExecutor.4ml  PlanExecutor.p  TestMotionPlanner  main.c  pingpong.4ml
Src/ros_simulator/src/p_controller/src/test_plan_executor/: Constructors.c  StubMotionPlanner.4ml  StubMotionPlanner.p  tester.c
aboutme/: index.md
dmr/: index.md
team/: index.md
(+581 files in other folders)
